tests/NormalTests/paczka1/fuzzy1/63532258.err
Error in line 1: sexwTMe7B A502 18,4
Error in line 6: A502 S756 12,0
Error in line 12: EbCOkPhQPxp S756 126,3
Error in line 21: A502 S756 30,95
Error in line 20: EbCOkPhQPxp A371 87,3
Error in line 22: EbCOkPhQPxp A502 42,4
Error in line 26: EbCOkPhQPxp A371 2,1
Error in line 25: A502 S756 9,8
Error in line 28: BNi0 A502 28,1
